# OpenSpecimenPyClient

./: LICENSE  README.md  local_test.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
OSApiClient/: api_query.py  client.py  local_test.py
osapiclient/: __init__.py  api_query.py  client.py
